[package]
name = "meshopt-rs"
version = "0.1.1"
authors = ["yzsolt"]
edition = "2021"
license = "MIT"
description = "Pure Rust implementation of the meshoptimizer library"
repository = "https://github.com/yzsolt/meshopt-rs"
categories = ["algorithms", "encoding", "game-development", "graphics", "rendering::data-formats"]
keywords = ["gamedev", "graphics", "meshing", "meshopt"]

[features]
# Experimental APIs have unstable interface and might have implementation that's not fully tested or optimized
experimental = []

[dev-dependencies]
criterion = "0.4.0"
miniz_oxide = "0.6.2"
tobj = "3.2.3"

[[bench]]
name = "with_input"
harness = false

[[bin]]
name = "codec_bench"
required-features = ["experimental"]
path = "bin/codec_bench.rs"
